[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/LifeBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://HUD/EmeraldCounter.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -675.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Bars" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1348.0
margin_bottom = 73.0

[node name="VBoxContainer" type="VBoxContainer" parent="Bars"]
margin_right = 500.0
margin_bottom = 53.0

[node name="LifeBar" parent="Bars/VBoxContainer" instance=ExtResource( 1 )]

[node name="HBoxContainer" type="HBoxContainer" parent="Bars"]
margin_left = 504.0
margin_right = 1224.0
margin_bottom = 53.0
size_flags_horizontal = 3
alignment = 1

[node name="TimePlayedLabel" type="Label" parent="Bars/HBoxContainer"]
margin_left = 313.0
margin_top = 12.0
margin_right = 407.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Time : 0"

[node name="Timer" type="Timer" parent="Bars/HBoxContainer"]
autostart = true

[node name="Counters" type="HBoxContainer" parent="Bars"]
margin_left = 1228.0
margin_top = 6.0
margin_right = 1328.0
margin_bottom = 46.0
size_flags_vertical = 4

[node name="EmeraldCounter" parent="Bars/Counters" instance=ExtResource( 4 )]
margin_left = 0.0
margin_right = 100.0
margin_bottom = 40.0
[connection signal="timeout" from="Bars/HBoxContainer/Timer" to="." method="_on_Timer_timeout"]
